2009-01-30  Hans Breuer  <hans@breuer.org>

	[ "a minor maintenance update" from Ian Redfern, bug #477679 ]
	* plug-ins/vdx/vdx-import.c : it replaces the g_assert() calls with 
	attempts to handle errors, and adds a bit more sanity checking - this
	should make it more robust with unusual or malformed files, 
	particularly those exported from applications other than Visio 
	(thank you OmniGraffle).
	It also fixes assorted small bugs that people have raised with nested 
	shapes, disconnected polygons, font handling and layers, but there's 
	no new features such as embedded EMF or even rounded rectangles, and 
	it makes no attempt to handle new Visio 2007 features.

	* objects/SISSI/area.c objects/SISSI/faraday.c objects/SISSI/room.c
	  objects/SISSI/sissi_object.c objects/SISSI/site.c : quite some 
	allocation/deallocation mismatch removed, fixes bug #569725

	* objects/Jackson/domain.c : remove superfluous allocation to avoid
	leaking it, fixes bug #569720

	* app/load_save.c : do not complain about missing object types per 
	layer but just once per diagram

	* app/confirm.c : there is no glib-3.16 yet

2009-02-27  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/usage-objects.xml: Finished incomplete sentence. Fixes
	bug #569369

2009-01-24  Hans Breuer  <hans@breuer.org>

	* lib/message.[ch] lib/libdia.def : new function dia_log_message() 
	which prints the given string together with a time-stamp, but only 
	if logging is enabled
	* app/app_procs.c lib/dialib.[ch] : when given --verbose enable logging
	* lib/plug-ins.c lib/sheet.c : sprinkled some dia_log_message() to get
	a grip on Dia's start-up performance (4 secs for python plug-in, 5 secs
	for custom plug-in - when started from cold caches)
	
	* app/confirm.[ch] : new function confirm_export_size() which let's the
	user confirm an unusal diagram size (conditionalized glib-2-16 function)
	* app/Makefile.am app/makefile.msc po/POTFILES.in : add new files